--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,9 @@
    background-color: #D6EAF8  !important;
 }
 .nav-link{
-    color: #ffffff;
+    color: #000000;
     font-weight: bold;
+}
+.nav-link:hover{
+    color: #FF3131;
 }
