--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 
 
 #menu{
-   background-color: #ffffff  !important;
+   background-color: var(--Encabezado)  !important;
 }
 .nav-link{
     color: #3dc5ff;
@@ -47,4 +47,27 @@ body{
     text-align: center;
     color: #000000;
     width: 100%;
+}
+
+/*  Footer */
+
+#page-footer{
+    background-color: var(--Encabezado);
+}
+
+#page-footer a{
+    color: var(--Enlace);
+}
+
+#page-footer .ftcontainer{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: flex-start;
+    align-content: center;
+    padding-top: 40px 0;
+    flex-wrap: nowrap;
+    
+
+
 }
