--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,29 @@ body{
     align-content: center;
     padding-top: 40px 0;
     flex-wrap: nowrap;
-    
+}
 
+.footer__menu{
+    max-width: 300px;
+    grid-column: 1/3;
+    grid-row-start: 1;
+    padding-left: 1em;
 
+}
+.footer__menu figure{
+    width: 100%;
+    padding: 0;
+    margin-top: 10px;
+}
+
+.footer__logo{
+    width: 150px;
+}
+
+#page-footer .ftcontainer{
+    max-width: 1200px;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 0 auto;
+    padding: 70px 0;
 }
