--- a/css/style.css
+++ b/css/style.css
@@ -93,3 +93,27 @@ body{
     margin: 0 auto;
     padding: 70px 0;
 }
+
+.ft-social{
+    color: #ffffff;
+    border-radius: 50%;
+    height: auto;
+    width: 30px;
+    display: inline-block;
+    font-size: 14px;
+    line-height: inherit;
+}
+
+.ft-link{
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+
+.footer__title{
+    color: #000000
+    font-weight: 700;
+    margin-bottom: 30px;
+    font-size: 1.2rem;
+
+}
