--- a/css/style.css
+++ b/css/style.css
@@ -111,9 +111,8 @@ body{
 }
 
 .footer__title{
-    color: #000000
+    color: #000000;
     font-weight: 700;
     margin-bottom: 30px;
     font-size: 1.2rem;
-
 }
