--- a/css/style.css
+++ b/css/style.css
@@ -116,3 +116,9 @@ body{
     margin-bottom: 30px;
     font-size: 1.2rem;
 }
+.footer__info{
+    color:#ffffff;
+    line-height: 30px;
+    font-size: 1.0rem;
+    
+}
