--- a/css/style.css
+++ b/css/style.css
@@ -98,7 +98,7 @@ body{
     color: #ffffff;
     border-radius: 50%;
     height: auto;
-    width: 30px;
+    width: 15px;
     display: inline-block;
     font-size: 14px;
     line-height: inherit;
@@ -108,12 +108,17 @@ body{
     padding: 0;
     margin: 0;
     list-style: none;
+    
+}
+
+.footer__link{
+    text-decoration: none;
 }
 
 .footer__title{
     color: #000000;
     font-weight: 700;
-    margin-bottom: 30px;
+    margin-bottom: 15px;
     font-size: 1.2rem;
 }
 .footer__info{
